Add Docker Compose test infrastructure and Makefile targets for improved developer experience
Enhanced the testing infrastructure to support reliable test execution across all platforms,
especially macOS where Docker networking can be problematic.

Changes:

1. Makefile enhancements:
   - Added 'test' target that runs docker-compose tests (recommended default)
   - Added 'test-local' target for local dockertest mode
   - Added 'test-docker' target for running tests in Docker container
   - Added 'test-docker-compose' target for docker-compose mode
   - Added 'test-coverage' target for coverage reports

2. Docker Compose setup (docker-compose.test.yml):
   - Cassandra service with health checks
   - Test runner service that waits for Cassandra to be ready
   - Uses Docker internal networking (resolves macOS connectivity issues)
   - Persistent volumes for Go build cache

3. Test Dockerfile (Dockerfile.test):
   - Go 1.24 Alpine-based image
   - Includes Docker CLI and necessary tools
   - Optimized layer caching for faster rebuilds

4. Enhanced test suite (main_test.go):
   - Auto-detects environment (local vs docker-compose)
   - In docker-compose mode: connects to existing Cassandra service
   - In local mode: uses dockertest to spin up container
   - Improved retry logic with better error messages
   - Graceful cleanup for both modes

5. Documentation updates:
   - Updated internal/action/README_TESTS.md with:
     * Makefile usage instructions
     * macOS-specific troubleshooting section
     * Explanation of connection errors and solutions
   - Updated main README.md with Development section
   - Added testing quick start guide

6. .gitignore updates:
   - Added coverage.out and coverage.html
   - Excluded test artifacts but allowed Dockerfile.test

Problem Solved:
On macOS, dockertest's port mapping doesn't work reliably due to Docker Desktop's VM.
The docker-compose approach uses Docker's internal networking (connecting to 'cassandra:9042')
which is much more

--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,13 @@ _testmain.go
 *.test
 *.prof
 
+# But allow test-related Docker files
+!Dockerfile.test
+!docker-compose.test.yml
+
 distr/
 gcqlsh_*
+
+# Test coverage
+coverage.out
+coverage.html
