--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -6,10 +6,11 @@ services:
     container_name: gcqlsh-test-cassandra
     environment:
       - CASSANDRA_BROADCAST_ADDRESS=cassandra
-      - CASSANDRA_LISTEN_ADDRESS=0.0.0.0
+      - CASSANDRA_RPC_ADDRESS=0.0.0.0
       - CASSANDRA_CLUSTER_NAME=TestCluster
       - CASSANDRA_DC=datacenter1
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
+      - CASSANDRA_START_RPC=true
     ports:
       - "9042:9042"
     networks:
