Add Homebrew and Nix flake installation support
- Add Homebrew formula in Formula/gcqlsh.rb for tap installation
- Configure GoReleaser to auto-update Homebrew formula on releases
- Add Nix flake.nix for declarative package management
- Update README with comprehensive installation instructions:
  - Homebrew installation via tap
  - Nix flakes installation and configuration examples
  - Go install method
  - Binary download option
- Update .gitignore to exclude Nix build artifacts (result symlinks)
- Update GoReleaser release notes template with new installation methods

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -89,6 +89,20 @@ changelog:
     - title: Other
       order: 999
 
+brews:
+  - repository:
+      owner: npenkov
+      name: gcqlsh
+      branch: main
+    folder: Formula
+    homepage: "https://github.com/npenkov/gcqlsh"
+    description: "Cassandra command line shell written in Go"
+    license: "MIT"
+    test: |
+      system "#{bin}/gcqlsh -v"
+    install: |
+      bin.install "gcqlsh"
+
 release:
   # Repo name is extracted from git remote
   github:
@@ -110,6 +124,19 @@ release:
     ### Download Binary
 
     Download the appropriate binary for your platform from the assets above.
+
+    ### Using Homebrew (macOS/Linux)
+
+    ```bash
+    brew tap npenkov/gcqlsh
+    brew install gcqlsh
+    ```
+
+    ### Using Nix Flakes
+
+    ```bash
+    nix profile install github:npenkov/gcqlsh
+    ```
 
     ### Using Go
 
